deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oblivious
  labels:
    app.kubernetes.io/name: oblivious
    app.kubernetes.io/part-of: oblivious
