deploy/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oblivious-server
  namespace: oblivious
  labels:
    app.kubernetes.io/name: oblivious
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oblivious
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
